# yfiles-jupyter-graphs-for-sparql

./: CODE_OF_CONDUCT.md  README.md  README_DEV.md  pyproject.toml
.github/workflows/: publish.yml
examples/: Getting_started.ipynb  Untitled.ipynb  beatles.ttl  configurations_example.ipynb
examples/releases/: v1.0.ipynb
src/yfiles_jupyter_graphs_for_sparql/: Yfiles_Sparql_Graphs.py
yfiles-jupyter-graphs-for-sparql/: .gitignore  pyproject.toml
yfiles-jupyter-graphs-for-sparql/examples/: Getting_started.ipynb
yfiles-jupyter-graphs-for-sparql/src/yfiles_jupyter_graphs_for_sparql/: __init__.py
