[project]
name = "yfiles-jupyter-graphs-for-sparql"
version = "1.0.0rc1"
authors = [
  {name = "yWorks Support Team", email= "yfileshtml@yworks.com"},
]
description = "The open-source adapter for working with RDF databases and SPARQL queries in Jupyter notebooks leveraging the yFiles Graphs for Jupyter plugin.s"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
]
dependencies = [
  "yfiles_jupyter_graphs>=1.9.0",
  "rdflib>=7.1.2",
]

[project.urls]
Homepage = "https://github.com/yWorks/yfiles-jupyter-graphs-for-sparql"
Issues = "https://github.com/yWorks/yfiles-jupyter-graphs-for-sparql/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"